# reed-solomon

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  build.sh  compare_and_plot_energy.py  compile_debug.sh  compile_external.sh  compile_release.sh  compile_test.sh  perf_compare_codes.sh
include/: constants.h  cyclotomic_coset.h  fft.h  gf65536.h  prelude.h  reed_solomon.h  seq.h  symbol.h
include/memory/: seq.h  symbol.h
include/rlc/: equation.h  gf256.h  rlc.h  system.h
include/rs/: cyclotomic_coset.h  fft.h  gf65536.h  prelude.h  reed_solomon.h
include/util/: util.h
src/: compare_codes.c  compare_op.c  compare_op_gf256.c  example.c  run_enc_dec.c
src/librs/: cyclotomic_coset.c  fft.c  gf65536.c  reed_solomon.c  seq.c  symbol.c
src/memory/: seq.c  symbol.c
src/rlc/: equation.c  gf256.c  rlc.c  system.c
src/rlc/prng/: tinymt32.c
src/rs/: cyclotomic_coset.c  fft.c  gf65536.c  reed_solomon.c
test/: CMakeLists.txt
test/include/: util.h
test/include/test/util/: util.h
test/src/: util.c
test/src/librs/: test_random_data.c
test/src/librs/cyclotomic_coset/: test__cc_get_cosets_cnt.c  test_cc_cosets_to_positions.c  test_cc_estimate_cosets_cnt.c  test_cc_select_cosets.c
test/src/librs/fft/: test_fft_partial_transform.c  test_fft_transform.c
test/src/librs/gf65536/: test_gf_div_ee.c  test_gf_mul_ee.c
test/src/librs/reed_solomon/: test_rs_generate_repair_symbols.c  test_rs_restore_symbols.c
test/src/rlc/: test_random_data.c
test/src/rs/: test_random_data.c
test/src/rs/cyclotomic_coset/: test_cc_cosets_to_positions.c  test_cc_estimate_cosets_cnt.c  test_cc_select_cosets.c
test/src/rs/gf65536/: test_gf_div_ee.c  test_gf_mul_ee.c
test/src/util/: util.c
